--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,22 @@ main {
     margin: 5px 0;
 }
 
+#circle-cover-bg {
+    background: url(../images/reasons-image.webp) no-repeat top center / cover;
+    margin-bottom: 20px; 
+    width: 90vw;
+    height: 90vw;
+    /* This turns the square image into circle*/
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
+
+#benefits-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 /* Footer */
 #social-networks {
@@ -158,7 +174,7 @@ main {
 #social-networks i {
     font-size: 160%;
     padding: 5%;
-    color: #3a3a3a
+    color: #3a3a3a;
 }
 
 
