--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,8 +86,6 @@ nav {
     font-size: 2rem;
 }
 
-
-
 /* Main content */
 main {
     
@@ -218,6 +216,15 @@ main {
 }
 
 
+/* Media query for large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
     /* Header */
@@ -276,6 +283,10 @@ main {
     align-self: flex-end;
 }
 
+/* Gallery */
+#photos {
+    column-count: 3;
+}
 }
 
 
@@ -283,6 +294,11 @@ main {
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
+    }
+
+    /* Gallery */
+    #photos {
+        column-count: 4;
     }
 }
 
