--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,10 @@ main {
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
+
+    /* Enable flex properties for child elements */
+    display: flex;
+    flex-direction: column;
 }
 
 /* Hero section */
@@ -200,6 +204,54 @@ main {
     line-height: 0;
 }
 
+
+/* Sing-up page */
+#signup {
+    background-image: url(../images/signup-image.webp);
+    background-size: cover;
+    background-position: 75%;
+    padding: 20px 10% 0 10%;
+    flex-grow: 1;
+}
+
+#signup-form {
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, 0.6);
+    padding: 30px;
+}
+
+#signup-form>h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    height: 25px;
+    width: 100%;
+    padding: 0 5px;
+    margin: 5px 0 20px 0;
+}
+
+.radio-buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.join-button {
+    border-radius: 2px;
+    background-color: #454b1b;
+    color: #fafafa;
+    font-size: 100%;
+    margin-top: 20px;
+    padding: 15px 32px;
+}
+
+
 /* Footer */
 #social-networks {
     text-align: center;
@@ -287,7 +339,33 @@ main {
 #photos {
     column-count: 3;
 }
+
+/* Sign-up form */
+#signup {
+    background-position: center;
+    position: relative;
 }
+
+#signup-form {
+    position: absolute;
+    max-width: 400px;
+    left: 10%;
+    top: 150px;
+}
+
+#text-input:hover {
+    border-color: #f16c6b;
+}
+
+#join-button:hover {
+    background-color: #fafafa;
+    color: #454b1b;
+}
+
+
+}
+
+
 
 
 /* Large devices (laptops and desktops, 992px and up) */
